crates/alder-can/src/snapshots/alder_can__types__tests__annotation_mixed.snap
---
source: crates/alder-can/src/types.rs
description: a -> List a
---
Annotation {
    free_vars: [
        "a",
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 2,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "List",
                        },
                        name: "List",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 11,
                                },
                                end: Position {
                                    line: 1,
                                    column: 12,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            },
        },
    },
}
