crates/alder-can/src/snapshots/alder_can__types__tests__bad_args_reported_before_arity.snap
---
source: crates/alder-can/src/types.rs
description: Maybe Bogus Other
---
[
    NotFoundType {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 12,
            },
        },
        prefix: None,
        name: "Bogus",
        suggestions: PossibleNames {
            locals: [
                "Maybe",
            ],
            qualified: [],
        },
    },
    NotFoundType {
        region: Region {
            start: Position {
                line: 1,
                column: 13,
            },
            end: Position {
                line: 1,
                column: 18,
            },
        },
        prefix: None,
        name: "Other",
        suggestions: PossibleNames {
            locals: [
                "Maybe",
            ],
            qualified: [],
        },
    },
]
