crates/alder-can/src/snapshots/alder_can__types__tests__type_union_reference.snap
---
source: crates/alder-can/src/types.rs
description: List a
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Named {
        reference: QualifiedName {
            home: ModuleName {
                package: None,
                name: "List",
            },
            name: "List",
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ],
    },
}
